1.1.8 (unreleased)
=====
* Added asynchronous stream copy creation API.

1.1.7 (2023-02-08)
=====
* Filter `NaN` when converting floats to and from
  OCaml in `swresample`.

1.1.6 (2022-09-26)
======
* Fix channel layout breakage with recent FFmpeg with new channel layout API.
* Fix memory leak with streams.
* Cleanup internal C binding.

1.1.5 (2022-08-28)
======
* Fix segfault when flushing an encoder that
  hasn't been started yet.
* Added flac to codec_attr.

1.1.4 (2022-06-18)
=====
* Added codec descriptor API.
* Added bitstream filters API
* Fixed issues with unimplements AvOptions types.
* Fixed memory cleanup when raising exception in `open_input` (#55)

1.1.3 (2022-04-06)
=====
* Use size of memory referred by AVFrame and AVPacket
  when allocating OCaml frame custom block to make sure
  the GC is diligent when cleaning up OCaml values
  referring to AVFrame and AVPacket.

1.1.2 (2022-03-13)
=====
* Change error returned on OCaml callback exception
  to AVERROR_EXTERNAL, add log entry.
* Get rid of naked pointers.
* Adapt to most recent FFmpeg API.
* Added offset/length to conversion functions.

1.1.1 (2021-12-26)
======
* Added support for interruption callback.

1.1.0 (2021-11-27)
=====
* Added support for filter commands.
* Make [Av.get_pixel_aspect] optional.
* Rename [Avfilter.sample_aspect_ratio] into [Avfilter.pixel_aspect], make it optional.

1.0.2 (2021-11-19)
=====
* Fix deadlock when raising exceptions in callbacks.

1.0.1 (2021-10-02)
=====
* Fixed segfault when using `Field(v, i) = v'` instead of `Store_field(v, i, v')`
* Fixed memory leak when avio callback raised exception.

1.0.0 (2021-09-14)
=====
* Switch to dune
* Heavy rework of the whole API

0.4.2 (2020-07-04)
=====
* Adapt to new 4.3 headers.

0.4.1 (2019-09-26)
=====
* Added Avutil.Audio.frame_get_sample_format.

0.4.0 (09-22-2019)
=====
* Added support for stream output.
* Updated stream and container creation API to be able to use any arbitrary FFmpeg parameter.
