@@ -1,6 +1,7 @@
 1.1.8 (unreleased)
 =====
 * Added asynchronous stream copy creation API.
+* Added `pkt_dts` API for AVFrame.
 
 1.1.7 (2023-02-08)
 =====
